// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra-details-parents Renders \`extra-details-parents\` with full parents 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <!---->
    <span
      class="c-extra-details__badge brown darken-1"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light white--text"
        style="font-size: 16px;"
      >
        center_focus_weak
      </i>
    </span>
  </span>
</div>
`;

exports[`extra-details-parents Renders \`extra-details-parents\` with full parents 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div
    class="text-md-center"
  >
    <strong>
      Meta alarm
    </strong>
    <div
      class="layout column"
    >
      <div>
        Rules :
      </div>
      <div
        class="rule-name"
      >
           parent-rule-1-name
      </div>
      <div
        class="rule-name"
      >
           parent-rule-2-name
      </div>
      <div
        class="rule-name"
      >
           parent-rule-3-name
      </div>
    </div>
    <div>
      Causes : 3
    </div>
  </div>
</div>
`;

exports[`extra-details-parents Renders \`extra-details-parents\` without rules 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <!---->
    <span
      class="c-extra-details__badge brown darken-1"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light white--text"
        style="font-size: 16px;"
      >
        center_focus_weak
      </i>
    </span>
  </span>
</div>
`;

exports[`extra-details-parents Renders \`extra-details-parents\` without rules 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div
    class="text-md-center"
  >
    <strong>
      Meta alarm
    </strong>
    <div
      class="layout column"
    >
      <div>
        Rules :
      </div>
    </div>
    <div>
      Causes : 3
    </div>
  </div>
</div>
`;
